--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,24 +16,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
+  
   backend:
-    build:
-      context: ./socialmedia-application-backend
-      dockerfile: Dockerfile
-    environment:
-      POSTGRES_HOST: db
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      FRONTEND_HOST: ${FRONTEND_HOST}
-      FRONTEND_PORT: ${FRONTEND_PORT}
-    ports:
-      - "${BACKEND_PORT}:${BACKEND_PORT}"
-    depends_on:
-      db:
-        condition: service_healthy
+      image: localhost:5000/socialmedia-backend:latest
+      environment:
+        POSTGRES_HOST: db
+        POSTGRES_DB: ${POSTGRES_DB}
+        POSTGRES_USER: ${POSTGRES_USER}
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_PORT: ${POSTGRES_PORT}
+        FRONTEND_HOST: ${FRONTEND_HOST}
+        FRONTEND_PORT: ${FRONTEND_PORT}
+      ports:
+        - "${BACKEND_PORT}:${BACKEND_PORT}"
+      depends_on:
+        db:
+          condition: service_healthy
         
   frontend:
     build:
