--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       retries: 5
   
   backend:
-      image: ${DOCKER_REGISTRY}:5000/socialmedia-backend:latest
+      image: ${DOCKER_REGISTRY}/socialmedia-backend:latest
       environment:
         POSTGRES_HOST: db
         POSTGRES_DB: ${POSTGRES_DB}
