--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   db:
     image: postgres:16-alpine
@@ -34,18 +33,12 @@ services:
           condition: service_healthy
         
   frontend:
-    build:
-      context: ./socialmedia-application-frontend
-      dockerfile: ${NODE_ENV:-development}.Dockerfile
+    image: ${DOCKER_REGISTRY}/socialmedia-frontend:latest
     environment:
       - NODE_ENV=${NODE_ENV:-development}
       - PORT=${FRONTEND_PORT}
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - /app/.next
 
 volumes:
   sm_postgres_data:
