--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
@@ -16,23 +16,25 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-  
+
   backend:
-      image: localhost:5000/socialmedia-backend:latest
-      environment:
-        POSTGRES_HOST: db
-        POSTGRES_DB: ${POSTGRES_DB}
-        POSTGRES_USER: ${POSTGRES_USER}
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_PORT: ${POSTGRES_PORT}
-        FRONTEND_HOST: ${FRONTEND_HOST}
-        FRONTEND_PORT: ${FRONTEND_PORT}
-      ports:
-        - "${BACKEND_PORT}:${BACKEND_PORT}"
-      depends_on:
-        db:
-          condition: service_healthy
-        
+    build:
+      context: ./socialmedia-application-backend
+      dockerfile: Dockerfile
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      FRONTEND_HOST: ${FRONTEND_HOST}
+      FRONTEND_PORT: ${FRONTEND_PORT}
+    ports:
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
+    depends_on:
+      db:
+        condition: service_healthy
+
   frontend:
     build:
       context: ./socialmedia-application-frontend
@@ -43,7 +45,7 @@ services:
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     volumes:
-      - .:/app
+      # - ./socialmedia-application-frontend:/app
       - /app/node_modules
       - /app/.next
 
