Added docker-compose without pulling from container register

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
       retries: 5
 
   backend:
-    image: ${DOCKER_REGISTRY}/socialmedia-backend:latest
+    build:
+      context: ./socialmedia-application-backend
+      dockerfile: Dockerfile
     environment:
       POSTGRES_HOST: db
       POSTGRES_DB: ${POSTGRES_DB}
@@ -33,7 +35,9 @@ services:
         condition: service_healthy
 
   frontend:
-    image: ${DOCKER_REGISTRY}/socialmedia-frontend:latest
+    build:
+      context: ./socialmedia-application-frontend
+      dockerfile: ${NODE_ENV:-development}.Dockerfile
     environment:
       - NODE_ENV=${NODE_ENV:-development}
       - PORT=${FRONTEND_PORT}
